# cloakbrowser-manager-cli

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  PLAN_ADVANCED_STEALTH.md  PLAN_REST_API.md  PROGRESS.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
IMPL/: 02-database.md  03-models.md  04-config.md  07-utils.md  08-cli-main.md  11-cli-list-status.md  13-cli-config-info.md  16-tui-screens.md
docs/: PLAN.md  PROGRESS.md  README.md
docs/impl/: 01-scaffolding.md  05-browser-manager.md  06-cdp-manager.md  09-cli-profile.md  10-cli-launch-stop.md  12-cli-cdp.md  14-tui-app.md  15-tui-widgets.md  17-testing-polish.md
src/cloakbrowser_manager_cli/: __init__.py  __main__.py
src/cloakbrowser_manager_cli/api/: __init__.py  app.py  auth.py  errors.py  routes_auth.py  routes_cdp.py  routes_config.py  routes_info.py  routes_profiles.py  routes_runtime.py  routes_status.py  routes_stealth.py  schemas.py
src/cloakbrowser_manager_cli/cli/: __init__.py  backup.py  cdp.py  config_cmd.py  health.py  info.py  launch.py  list_cmd.py  main.py  profile.py  proxy.py  serve.py  status.py  stealth.py  stop.py  tui.py
src/cloakbrowser_manager_cli/core/: __init__.py  browser_manager.py  cdp_manager.py  config.py  database.py  models.py  utils.py
src/cloakbrowser_manager_cli/tui/: __init__.py  app.py  styles.css
src/cloakbrowser_manager_cli/tui/screens/: __init__.py  advanced_profile.py  api_server.py  clone_profile.py  code_snippet.py  confirm.py  create_profile.py  edit_profile.py  help.py  profile_form.py  stealth_test.py
src/cloakbrowser_manager_cli/tui/widgets/: __init__.py  action_bar.py  log_panel.py  profile_detail.py  profile_list.py  tag_filter.py
tests/: conftest.py  test_api.py  test_browser_manager.py  test_cdp_manager.py  test_cli.py  test_config.py  test_database.py  test_models.py  test_stealth.py  test_tui_advanced.py  test_utils.py
